--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>sistema de cadastro </h1>
-    <script    src="app.py></script>
-
+    <script    src="app.py"></script>
+    ":)"
 </body>
 </html>
