adicionando img ao index html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 =======
     <script    src="app.py"></script>
     ":)"
-    <img>"https://tenor.com/pt-BR/view/xdd-xdding-cat-cute-cursed-gif-27104766.gif"
+    <img"https://tenor.com/pt-BR/view/xdd-xdding-cat-cute-cursed-gif-27104766.gif">
 </body>
 </html>
