adicionando img ao index html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>sistema de cadastro </h1>
     <script    src="app.py"></script>
     ":)"
+    <img src="https://tenor.com/pt-BR/view/xdd-xdding-cat-cute-cursed-gif-27104766.gif" alt="12">
 
 </body>
 </html>
